<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1dabc5" >

    <TextView
        android:id="@+id/fragment3_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/location"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/fragment3_backbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/fragment3_showinmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragment3_backbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:text="@string/showinmap" />

</RelativeLayout>