<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dip" >

    <LinearLayout
        android:id="@+id/ll_tv_input_new_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_input_new_number"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1000"
            android:hint="@string/please_input_the_trust_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/bt_confirm_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_choose_from_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_tv_input_new_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/add_from_contactsbook" />

</RelativeLayout>