<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1dabc5" >

    <Button
        android:id="@+id/fragment1_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="30dp"
        android:text="@string/get_him" />

    <LinearLayout
        android:id="@+id/ll_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment1_bt"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/fragment1_number"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:hint="@string/please_input_the_number"
            android:inputType="numberSigned" />

        <ImageView
            android:id="@+id/fragment1_contact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/hello_world"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:src="@drawable/ic_add_contact_holo_dark" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_number"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/map" />

</RelativeLayout>
