<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1dabc5"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip" >

        <TextView
            android:id="@+id/iv1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/store__top_view__tab1_focus"
            android:gravity="center"
            android:onClick="click"
            android:shadowColor="#ff17879b"
            android:shadowDx="0"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/title1"
            android:textColor="#ffffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/iv2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/store__top_view__tab2_normal"
            android:gravity="center"
            android:onClick="click"
            android:shadowColor="#ff17879b"
            android:shadowDx="0"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/title2"
            android:textColor="#ffffff"
            
            android:textSize="15sp" />

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/hello_world"
            android:background="@drawable/store__top_view__tab_bg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>